# lane_detection

./: .gitignore  Models.py  README.md  Untitled.ipynb  losses.py  pred.py  pred_video.py  pruning_quantization_example.ipynb  quantize_model.py  requirements.txt  train.py  utils.py
.ipynb_checkpoints/: pruning_quantization_example-checkpoint.ipynb
cpp-inference/: CMakeLists.txt  README.md  build.sh  classification.cc  inference.sh  labels.txt  segmentation.cc
scripts/: Models.py  cluster_quantize.py  pred_video.py  quantize_model.py
